--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,59 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+body{
+    background:#212121;
+}
+.text{
+    color: #b4b4b4;
+}
+.border-radius{
+    border-radius: 50%;
+}
+.gpt{
+    color: #878787;
+}
+.gpthead{
+    color: #ececec;
+}
+.bordergpt{
+    border-color: #424242;
+    
+}
+.out{
+    outline: none;
+}
+   /* Hide scrollbar for Chrome, Safari and Opera */
+   .no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.react{
+    clip-path: circle(50% at 50% 50%);
 }
+.js{
+    clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+}
+.pwa{
+    clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
+}
+.css{
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+}
+.tailwind{
+    clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+}
+.redux{
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);}
+
+    @media only screen and (max-width: 300px) {
+        /* Media query targeting screens with a maximum width of 600 pixels */
+        .media {
+            width: 100%; /* Sets the background color to red for elements with the class .media */
+        }
+    }
